force-app/main/default/objects/Process_Log__c/fields/Completed_Successfully__c.field-meta.xml
<CustomField>
    <fullName>Completed_Successfully__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed Successfully</label>
    <type>Checkbox</type>
</CustomField>