force-app/main/default/objects/Process_Log__c/fields/Process_Failed__c.field-meta.xml
<CustomField>
    <fullName>Process_Failed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Failed</label>
    <type>Checkbox</type>
</CustomField>