force-app/main/default/objects/Process_Log__c/fields/Process_Message__c.field-meta.xml
<CustomField>
    <fullName>Process_Message__c</fullName>
    <label>Process Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>