force-app/main/default/objects/Process_Log__c/fields/Process_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Process_Start_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Process Start Time</label>
    <type>DateTime</type>
</CustomField>