force-app/main/default/objects/Process_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Process_Name__c</columns>
    <columns>Completed_Successfully__c</columns>
    <columns>Process_Failed__c</columns>
    <columns>Process_Message__c</columns>
    <columns>Process_Start_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>